--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==21.2.0
 certifi==2021.5.30
 chardet==4.0.0
 charset-normalizer==2.0.3
+discord-pretty-help==1.3.2
 discord.py==1.7.3
 idna==3.2
 multidict==5.1.0
