--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ discord.py==1.7.3
 idna==3.2
 multidict==5.1.0
 python-dotenv==0.19.0
+redis==3.5.3
 requests==2.26.0
 typing-extensions==3.10.0.0
 urllib3==1.26.6
+walrus==0.8.2
 yarl==1.6.3
